SERVER-15691 acquiring balancer lock may fail and get stuck with concurrent write traffic

Make config.locks { ts: 1 } not unique